dddd.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\dddd.cpp: In function 'void printInformation(Employee)':
C:\Users\zainu\Desktop\курс\proekt2\dddd.cpp:10:6: warning: no previous declaration for 'void printInformation(Employee)' [-Wmissing-declarations]
 void printInformation(Employee)
      ^
C:\Users\zainu\Desktop\курс\proekt2\dddd.cpp:12:28: error: 'employee' was not declared in this scope
     std::cout << "ID: " << employee.id << "\n";
                            ^
---------------------------------------------------------------------------------------------
[11.06.2021  9:53:18,56 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\dddd.cpp" -o C:\Users\zainu\Desktop\курс\proekt2\dddd.exe  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
